--- a/ludo-whatsapp-group-links.html
+++ b/ludo-whatsapp-group-links.html
@@ -46,6 +46,13 @@
       <a href="privacy.html">Privacy</a>
     </div>
   </nav>
+  <section class="hero">
+    <h1>Join Trusted Ludo WhatsApp Groups!</h1>
+    <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform with free and verified WhatsApp groups, Ludo King tournaments, and instant payouts.</p>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
+    <br><br>
+    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
+  </section>
 
   <section class="hero">
     <h1>Ludo WhatsApp Group Links</h1>
