--- a/ludo-whatsapp-group-links.html
+++ b/ludo-whatsapp-group-links.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ludo Group Link - WhatsApp Group List</title>
 
-  <meta name="description" content="Join the latest Ludo WhatsApp Group Links for private matches and fun online gameplay. Invite friends and explore daily tournaments." />
-  <meta name="keywords" content="ludo whatsapp group link, private ludo table, play ludo online, join ludo group, gaming whatsapp groups, ludo tournament group" />
-
+  <meta name="description" content="Join the latest and most active Ludo WhatsApp Group Links. Participate in private tables, win online matches, and enjoy verified Ludo King groups daily." />
+  <meta name="keywords" content="Ludo WhatsApp group links, Ludo King groups, join Ludo tournament, private Ludo tables, online Ludo group, play Ludo on WhatsApp" />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Ludo Group Link Team" />
+  <link rel="canonical" href="https://ludogrouplink.com/ludo-whatsapp-group-links.html" />
+  
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -22,7 +25,7 @@
     .hero h1 { font-size: 30px; margin-bottom: 15px; }
     .hero p { font-size: 18px; max-width: 700px; margin: 0 auto 25px auto; line-height: 1.6; }
     .content-section { max-width: 800px; margin: 40px auto; padding: 0 20px; line-height: 1.8; }
-    .content-section h2 { font-size: 22px; margin: 20px 0 10px; }
+    .content-section h2, .content-section h3 { font-size: 22px; margin: 20px 0 10px; }
     .content-section ul { padding-left: 20px; }
     .content-section ul li { margin-bottom: 8px; }
     .group-links { margin-top: 20px; }
@@ -105,53 +108,6 @@
 
     <p style="margin-top: 30px; font-size: 14px; color: #888;">Filed Under: Entertainment, Gaming</p>
   </section>
-<section class="content-section">
-  <h2>Ludo WhatsApp Group Links</h2>
-  <p>Ludo WhatsApp Groups Links for friends to participate and play with other online players on private tables to have fun and try to win.</p>
-  <p>Join Ludo WhatsApp Groups to create your private matches and invite your friends or known to play with you.</p>
-
-  <h3>Rules for Ludo WhatsApp Groups</h3>
-  <ul>
-    <li>These groups are for entertainment only.</li>
-    <li>We don’t own any group, all these groups belong to their respective admin.</li>
-    <li>Contact group admin for any question or query.</li>
-    <li>Do not spam groups with unwanted links or videos.</li>
-    <li>Do not change group names without admin permission.</li>
-  </ul>
-
-  <h3>Active Ludo WhatsApp Group Links</h3>
-  <ul class="group-links">
-    <li>Ludo Champion – <a href="#">Link</a></li>
-    <li>Ludo Games – <a href="#">Link</a></li>
-    <li>Dice Control – <a href="#">Link</a></li>
-    <li><strong>Gaming WhatsApp Groups</strong></li>
-    <li>Ludo Master – <a href="#">Link</a></li>
-    <li>Ludo King Only – <a href="#">Link</a></li>
-    <li>Play Now – <a href="#">Link</a></li>
-    <li>Winner Trophy – <a href="#">Link</a></li>
-    <li><strong>Sports WhatsApp Groups</strong></li>
-    <li>Ludo Teams – <a href="#">Link</a></li>
-    <li>Battle Time – <a href="#">Link</a></li>
-    <li>Ludo Tournament – <a href="#">Link</a></li>
-    <li><em>Best video game consoles</em></li>
-  </ul>
-
-  <h3>How to Join the Ludo WhatsApp Groups?</h3>
-  <ul>
-    <li>Choose any WhatsApp Group Invite Link to Ludo from the above list.</li>
-    <li>Now Hit on Join Button.</li>
-    <li>Hurray! You are now part of the Ludo WhatsApp Group.</li>
-  </ul>
-
-  <h3>Find More Related WhatsApp Groups</h3>
-  <ul>
-    <li><a href="#">Travel WhatsApp Group Link</a></li>
-    <li><a href="#">UGC NET WhatsApp Group Links</a></li>
-    <li><a href="#">Jaipur WhatsApp Groups Links</a></li>
-    <li><a href="#">Web Developer WhatsApp Group</a></li>
-    <li><a href="#">Songs WhatsApp Group Link</a></li>
-  </ul>
-</section>
 
   <footer>
     <div class="footer-links">
