--- a/ludo-whatsapp-group-links.html
+++ b/ludo-whatsapp-group-links.html
@@ -33,6 +33,17 @@
     .footer-links { display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-bottom: 10px; }
     .footer-links a { color: #fff; text-decoration: none; }
     .footer-links a:hover { color: #ffde59; }
+       .hero h1 {
+      font-size: 32px;
+      margin-bottom: 15px;
+    }
+    .hero p {
+      font-size: 18px;
+      margin-bottom: 25px;
+      max-width: 700px;
+      margin: 0 auto 25px auto;
+      line-height: 1.5;
+    }
   </style>
 </head>
 <body>
@@ -48,6 +59,13 @@
       <a href="privacy.html">Privacy</a>
     </div>
   </nav>
+<section class="hero">
+    <h1>Join Trusted Ludo WhatsApp Groups!</h1>
+    <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform with free and verified WhatsApp groups, Ludo King tournaments, and instant payouts.</p>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
+    <br><br>
+    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
+  </section>
 
   <section class="hero">
     <h1>Join Trusted Ludo WhatsApp Groups!</h1>
