--- a/join.html
+++ b/join.html
@@ -210,6 +210,13 @@
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
     </div>
+
+    <div class="group-card">
+      <h3>💥 Ludo Whatsapp Group Link</h3>
+      <p>24/7 Ludo games | Quick entry | Real players only</p>
+      <a href="  https://ludogrouplink.com/ludo-whatsapp-group-links.html#" class="join-btn" target="_blank">Join Now</a>
+    </div>
+  
     <!-- Add more group-card blocks as needed -->
   </div>
 
