--- a/ludo-group-link.html
+++ b/ludo-group-link.html
@@ -10,6 +10,16 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
+     .hero h1 {
+      font-size: 32px;
+      margin-bottom: 15px;
+    }
+    .hero p {
+      font-size: 18px;
+      margin-bottom: 25px;
+      max-width: 700px;
+      margin: 0 auto 25px auto;
+      line-height: 1.5;
     body { font-family: 'Poppins', sans-serif; background: #fffbe6; color: #222; margin: 0; padding: 0; }
     header, footer { background: #2d2e52; color: #fff; padding: 20px 0; text-align: center; }
     header h1 { font-size: 26px; margin-bottom: 10px; }
@@ -35,6 +45,13 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+<section class="hero">
+    <h1>Join Trusted Ludo WhatsApp Groups!</h1>
+    <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform with free and verified WhatsApp groups, Ludo King tournaments, and instant payouts.</p>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
+    <br><br>
+    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
+  </section>
 
   <section class="hero">
     <h2>Sabse Best WhatsApp Ludo Groups</h2>
