--- a/ludo-group-link.html
+++ b/ludo-group-link.html
@@ -3,31 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Join Ludo Group Link - WhatsApp Gaming Groups 2025</title>
+  <title>Join Ludo Group Link - Best WhatsApp Ludo Groups for Satta & Cash 2025</title>
 
-  <meta name="description" content="Join the latest Ludo WhatsApp group links for daily matches, satta games, and real cash tournaments. Explore VIP Joker Ludo groups and win big!" />
-  <meta name="keywords" content="ludo group link, ludo satta game, sabse best whatsapp, joker ludo group, play ludo online, join ludo whatsapp group, ludo cash game whatsapp" />
+  <meta name="description" content="Find and join the most active Ludo WhatsApp group links for daily ludo matches, satta games, cash tournaments, and Joker Ludo earning groups. Play & win big now!" />
+  <meta name="keywords" content="ludo group link, joker ludo group, ludo satta game, join ludo whatsapp group, ludo cash group, whatsapp ludo game, best whatsapp group, game badhiya, whatsapp se chat" />
+
+  <link rel="canonical" href="https://ludogrouplink.com/ludo-group-link.html" />
+  <meta property="og:title" content="Join Ludo WhatsApp Group Link 2025 - Joker Ludo, Satta, Cash Games" />
+  <meta property="og:description" content="Join verified Ludo WhatsApp groups for Joker Ludo, satta games & cash tournaments. Best WhatsApp groups to play and earn." />
+  <meta property="og:url" content="https://ludogrouplink.com/ludo-group-link.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Ludo Group Link" />
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
-     .hero h1 {
-      font-size: 32px;
-      margin-bottom: 15px;
-    }
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 25px;
-      max-width: 700px;
-      margin: 0 auto 25px auto;
-      line-height: 1.5;
-    }
     body { font-family: 'Poppins', sans-serif; background: #fffbe6; color: #222; margin: 0; padding: 0; }
     header, footer { background: #2d2e52; color: #fff; padding: 20px 0; text-align: center; }
     header h1 { font-size: 26px; margin-bottom: 10px; }
     nav a { color: #fff; text-decoration: none; margin: 0 10px; font-weight: 500; }
     .hero { padding: 40px 20px; text-align: center; background: linear-gradient(to right, #ffe57f, #ffc107); }
+    .hero h1 { font-size: 32px; margin-bottom: 15px; }
     .hero h2 { font-size: 30px; margin-bottom: 10px; }
-    .hero p { font-size: 18px; max-width: 700px; margin: auto; }
+    .hero p { font-size: 18px; margin: 0 auto 25px auto; max-width: 700px; line-height: 1.5; }
+    .join-btn {
+      display: inline-block;
+      background: #008000;
+      color: #fff;
+      padding: 10px 20px;
+      font-weight: 600;
+      text-decoration: none;
+      border-radius: 5px;
+      margin-top: 10px;
+    }
     .content { max-width: 800px; margin: 40px auto; padding: 0 20px; line-height: 1.8; }
     .content h3 { font-size: 22px; margin-top: 30px; color: #c14400; }
     ul.group-list { list-style: none; padding-left: 0; }
@@ -46,7 +53,8 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-<section class="hero">
+
+  <section class="hero">
     <h1>Join Trusted Ludo WhatsApp Groups!</h1>
     <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform with free and verified WhatsApp groups, Ludo King tournaments, and instant payouts.</p>
     <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
@@ -78,7 +86,7 @@
     </ul>
 
     <h3>📈 High-Search Keywords We Target:</h3>
-    <p>ludo satta game, sabse best whatsapp, whatsapp se chat, game badhiya, sabse accha game, joker ludo group, किग लुडो, whatsapp mujhe, ek aur whatsapp</p>
+    <p><strong>ludo satta game</strong>, <strong>sabse best whatsapp</strong>, <strong>whatsapp se chat</strong>, <strong>game badhiya</strong>, <strong>sabse accha game</strong>, <strong>joker ludo group</strong>, <strong>किग लुडो</strong>, <strong>whatsapp mujhe</strong>, <strong>ek aur whatsapp</strong></p>
   </section>
 
   <footer>
