--- a/addgroup.html
+++ b/addgroup.html
@@ -2,24 +2,57 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Add your WhatsApp Joker Ludo Group for free. Submit and get listed after admin approval."/>
-  <meta name="author" content="JokerLudo" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>JokerLudo - Best Ludo WhatsApp Group Links | Earn Money Playing Ludo</title>
 
-  <title>Add Group – JokerLudo</title>
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
+  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
+  <meta name="author" content="JokerLudo Group" />
+  <meta name="robots" content="index, follow" />
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
 
-  <!-- Google Analytics -->
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="google-site-verification-code-here" />
+
+  <!-- Google Analytics (G-EZF7SRX6EJ) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-EZF7SRX6EJ');
   </script>
 
+  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
+  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
+  <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+  <meta property="og:url" content="https://ludogrouplink.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
+  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
+  <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "JokerLudo Group",
+    "url": "https://ludogrouplink.com",
+    "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
+    "sameAs": [
+      "https://www.facebook.com/JokerLudo",
+      "https://www.instagram.com/JokerLudo"
+    ]
+  }
+  </script>
   <style>
     body {
       font-family: 'Poppins', sans-serif;
