--- a/earning-ludo-groups.html
+++ b/earning-ludo-groups.html
@@ -197,7 +197,7 @@
   <section class="hero">
     <h1>Earn Real Money from Ludo Games!</h1>
     <p>Join our exclusive Ludo earning WhatsApp groups and start winning today. Daily matches, instant payouts, and a trusted platform – only on JokerLudo.</p>
-    <a href="https://chat.whatsapp.com/ExampleGroupLink" class="join-btn" aria-label="Join Ludo Earning Group">Join Now</a>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn" aria-label="Join Ludo Earning Group">Join Now</a>
   </section>
 
   <section class="seo-text">
