--- a/join.html
+++ b/join.html
@@ -3,27 +3,55 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Join active JokerLudo WhatsApp groups and start playing real money ludo games.">
-  <meta name="keywords" content="jokerludo whatsapp group, ludo join group, real money ludo groups">
-  <meta name="author" content="JokerLudo">
+  <title>JokerLudo - Best Ludo WhatsApp Group Links | Earn Money Playing Ludo</title>
 
-  <meta property="og:title" content="Join WhatsApp Groups – JokerLudo" />
-  <meta property="og:description" content="Click to join JokerLudo WhatsApp groups and start playing real ludo games now!" />
-  <meta property="og:url" content="https://ludogrouplink.com/join.html" />
-  <meta property="og:type" content="website" />
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
+  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
+  <meta name="author" content="JokerLudo Group" />
+  <meta name="robots" content="index, follow" />
 
-  <title>Join WhatsApp Groups – JokerLudo</title>
+  <!-- Favicon -->
+  <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="google-site-verification-code-here" />
 
-  <!-- Google Analytics -->
+  <!-- Google Analytics (G-EZF7SRX6EJ) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-EZF7SRX6EJ');
+  </script>
+
+  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
+  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
+  <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+  <meta property="og:url" content="https://ludogrouplink.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
+  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
+  <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "JokerLudo Group",
+    "url": "https://ludogrouplink.com",
+    "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
+    "sameAs": [
+      "https://www.facebook.com/JokerLudo",
+      "https://www.instagram.com/JokerLudo"
+    ]
+  }
   </script>
 
   <!-- Styles -->
