--- a/joker-ludo-group-link.html
+++ b/joker-ludo-group-link.html
@@ -5,28 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Popular Ludo WhatsApp Group Keywords | JokerLudo Group</title>
   
-  <!-- Meta Tags -->
-  <meta name="description" content="Explore 50+ popular Ludo WhatsApp group keywords for join, earn money, verified groups & instant payout. JokerLudo presents trusted Ludo King community keywords." />
-  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, join ludo group, whatsapp ludo group link, ludo join group, verified ludo group, trusted ludo group, ludo king whatsapp group, ludo earning whatsapp group, free ludo group link, online ludo players group, ludo tournaments whatsapp group, best ludo groups" />
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
+  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
   <meta name="author" content="JokerLudo Group" />
   <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Popular Ludo WhatsApp Group Keywords | JokerLudo" />
-  <meta property="og:description" content="Explore 50+ popular Ludo WhatsApp group keywords for join, earn money, verified groups & instant payout. JokerLudo presents trusted Ludo King community keywords." />
-  <meta property="og:url" content="https://ludogrouplink.com/seo-keywords.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="JokerLudo" />
-  <meta property="og:image" content="https://ludogrouplink.com/images/banner.jpg" />
+  <!-- Favicon -->
+  <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
 
-  <!-- JSON-LD Structured Data -->
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="google-site-verification-code-here" />
+
+  <!-- Google Analytics (G-EZF7SRX6EJ) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-EZF7SRX6EJ');
+  </script>
+
+  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
+  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
+  <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+  <meta property="og:url" content="https://ludogrouplink.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
+  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
+  <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+
+  <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "JokerLudo Group",
     "url": "https://ludogrouplink.com",
-    "logo": "https://ludogrouplink.com/images/logo.png",
+    "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
     "sameAs": [
       "https://www.facebook.com/JokerLudo",
       "https://www.instagram.com/JokerLudo"
