--- a/ludo-king-game.html
+++ b/ludo-king-game.html
@@ -5,38 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JokerLudo - Trusted Ludo WhatsApp Group Links | Play & Earn</title>
 
-  <!-- ✅ SEO Meta Tags -->
-  <meta name="description" content="Join verified Ludo WhatsApp groups and earn real money daily. JokerLudo provides trusted Ludo King group links, instant payouts, 24x7 support, and secure gameplay." />
-  <meta name="keywords" content="ludo whatsapp group, jokerludo, ludo king group link, earn money ludo, fastwin ludo group, trusted ludo whatsapp group, real cash ludo, join ludo groups" />
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
+  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
   <meta name="author" content="JokerLudo Group" />
   <meta name="robots" content="index, follow" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
 
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="google-site-verification-code-here" />
 
-  <!-- Google Analytics -->
+  <!-- Google Analytics (G-EZF7SRX6EJ) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-EZF7SRX6EJ');
   </script>
 
-  <!-- ✅ Open Graph for Social Sharing -->
-  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups to Earn Daily" />
-  <meta property="og:description" content="Play Ludo and earn real money! Join JokerLudo's trusted WhatsApp groups for daily Ludo King matches with fast withdrawals and 24x7 support." />
+  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
+  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
   <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
-  <meta property="og:url" content="https://ludogrouplink.com/index.html" />
+  <meta property="og:url" content="https://ludogrouplink.com/" />
   <meta property="og:type" content="website" />
 
-  <!-- ✅ Twitter Cards -->
+  <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="JokerLudo - Earn Real Money Playing Ludo King" />
-  <meta name="twitter:description" content="Join verified JokerLudo WhatsApp groups and play Ludo King tournaments to win real cash daily." />
+  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
+  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
   <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
 
-  <!-- ✅ Schema Markup (JSON-LD) -->
+  <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
