--- a/join.html
+++ b/join.html
@@ -244,6 +244,70 @@
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="  https://ludogrouplink.com/ludo-whatsapp-group-links.html#" class="join-btn" target="_blank">Join Now</a>
     </div>
+    <!-- Existing content remains unchanged until the new group cards are appended -->
+<!-- Inserted after the last group-card block inside the .container div -->
+
+    <!-- 🔽 Newly Added Group Cards (Name-wise Sorted) -->
+    <div class="group-card">
+      <h3>💥 joker-ludo-group-link</h3>
+      <p>Real cash Ludo groups | Fast payouts | Safe play</p>
+      <a href="https://ludogrouplink.com/joker-ludo-group-link.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+
+    <div class="group-card">
+      <h3>💥 ludo-group-link</h3>
+      <p>Fast Win Ludo | Fair play | Verified players</p>
+      <a href="https://ludogrouplink.com/ludo-group-link.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+
+    <div class="group-card">
+      <h3>💥 ludo-king-game</h3>
+      <p>Instant Games | Trusted Admins | Real Rewards</p>
+      <a href="https://ludogrouplink.com/ludo-king-game.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+
+    <div class="group-card">
+      <h3>💥 ludo-whatsapp-group</h3>
+      <p>India's Best Ludo WhatsApp Groups</p>
+      <a href="https://ludogrouplink.com/ludo-whatsapp-group.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+
+    <div class="group-card">
+      <h3>💥 ludo-whatsapp-group-link</h3>
+      <p>Join active players | Daily matches | Secure payment</p>
+      <a href="https://ludogrouplink.com/ludo-whatsapp-group-link.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+
+    <div class="group-card">
+      <h3>💥 ludo-whatsapp-group-links</h3>
+      <p>24/7 Ludo Play | No Cheating | Fast Support</p>
+      <a href="https://ludogrouplink.com/ludo-whatsapp-group-links.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+
+    <div class="group-card">
+      <h3>💥 ludo-whatsapp-groups</h3>
+      <p>Cash Games | Verified Groups | New Matches Daily</p>
+      <a href="https://ludogrouplink.com/ludo-whatsapp-groups.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+
+    <div class="group-card">
+      <h3>💥 online-ludo-game</h3>
+      <p>Play Online Ludo | Compete & Earn</p>
+      <a href="https://ludogrouplink.com/online-ludo-game.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+
+    <div class="group-card">
+      <h3>💥 Online ludo group link india</h3>
+      <p>Top Indian Ludo WhatsApp Links</p>
+      <a href="https://ludogrouplink.com/Online%20ludo%20group%20link%20india.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+
+    <div class="group-card">
+      <h3>💥 privacy</h3>
+      <p>Review our privacy policy and stay informed.</p>
+      <a href="https://ludogrouplink.com/privacy.html" class="join-btn" target="_blank">View</a>
+    </div>
+
   
     <!-- Add more group-card blocks as needed -->
   </div>
