--- a/join.html
+++ b/join.html
@@ -197,120 +197,68 @@
   <div class="container">
     <h2>🔥 Join JokerLudo WhatsApp Groups</h2>
 
+   <div class="container">
+    <h2>🔥 Join JokerLudo WhatsApp Groups</h2>
+
     <div class="group-card">
+      <img src="https://i.pinimg.com/1200x/63/ad/27/63ad27d5a49cd3cd624b414ce0bfbd9a.jpg" alt="Group Icon">
       <h3>💥 Joker Ludo Group 1</h3>
       <p>Real cash games | Instant payment | Fair play</p>
       <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn" target="_blank">Join Now</a>
     </div>
      <div class="group-card">
+      <img src="https://i.pinimg.com/736x/d8/45/db/d845db0b8f1247949d755c6f623570ea.jpg" alt="Group Icon">
       <h3>💥girls-ludo-group-links</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/girls-ludo-group-links.html" class="join-btn" target="_blank">Join Now</a>
     </div>
     <div class="group-card">
+      <img src="https://i.pinimg.com/736x/7e/24/77/7e24774bdc54fb67b344561462775228.jpg" alt="Group Icon">
       <h3>💥Whatsapp-ludo-group-link-joker</h3>
       <p>Daily matches | Trusted admin | No cheating</p>
       <a href="https://ludogrouplink.com/Whatsapp-ludo-group-link-joker.html" class="join-btn" target="_blank">Join Now</a>
     </div>
 
     <div class="group-card">
+      <img src="https://i.pinimg.com/1200x/f1/04/75/f10475249b015215419690928bcc99fe.jpg" alt="Group Icon">
       <h3>💥 earning-ludo-group</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
     </div>
      <div class="group-card">
+      <img src="https://i.pinimg.com/1200x/75/54/0a/75540a696a361cfd3672937c8f59f4dd.jpg" alt="Group Icon">
       <h3>💥joker-ludo-whatsapp-group</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/joker-ludo-whatsapp-group.html" class="join-btn" target="_blank">Join Now</a>
     </div>
      <div class="group-card">
+      <img src="https://i.pinimg.com/736x/a9/1a/53/a91a534388d5d8f812619216012fa1c8.jpg" alt="Group Icon">
       <h3>💥ludo whatsapp group link</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/ludo%20whatsapp%20group%20link.html" class="join-btn" target="_blank">Join Now</a>
     </div>
      <div class="group-card">
+      <img src="https://i.pinimg.com/736x/90/80/dd/9080dd4178a03ee0b3a5c41520eee039.jpg" alt="Group Icon">
       <h3>💥 ludo-king-whatsapp-group-links</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/ludo-king-whatsapp-group-links.html" class="join-btn" target="_blank">Join Now</a>
     </div>
      <div class="group-card">
+      <img src="https://i.pinimg.com/736x/5a/55/15/5a55159362d3450ca040666a41f82c56.jpg" alt="Group Icon">
       <h3>💥 Dubai-ludo-group</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
     </div>
 
     <div class="group-card">
+      <img src="https://i.pinimg.com/736x/94/e2/ee/94e2ee9b7fa49f330d329aa0a70739e2.jpg" alt="Group Icon">
       <h3>💥 Ludo Whatsapp Group Link</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="  https://ludogrouplink.com/ludo-whatsapp-group-links.html#" class="join-btn" target="_blank">Join Now</a>
     </div>
-    <!-- Existing content remains unchanged until the new group cards are appended -->
-<!-- Inserted after the last group-card block inside the .container div -->
 
-    <!-- 🔽 Newly Added Group Cards (Name-wise Sorted) -->
-    <div class="group-card">
-      <h3>💥 joker-ludo-group-link</h3>
-      <p>Real cash Ludo groups | Fast payouts | Safe play</p>
-      <a href="https://ludogrouplink.com/joker-ludo-group-link.html" class="join-btn" target="_blank">Join Now</a>
-    </div>
-
-    <div class="group-card">
-      <h3>💥 ludo-group-link</h3>
-      <p>Fast Win Ludo | Fair play | Verified players</p>
-      <a href="https://ludogrouplink.com/ludo-group-link.html" class="join-btn" target="_blank">Join Now</a>
-    </div>
-
-    <div class="group-card">
-      <h3>💥 ludo-king-game</h3>
-      <p>Instant Games | Trusted Admins | Real Rewards</p>
-      <a href="https://ludogrouplink.com/ludo-king-game.html" class="join-btn" target="_blank">Join Now</a>
-    </div>
-
-    <div class="group-card">
-      <h3>💥 ludo-whatsapp-group</h3>
-      <p>India's Best Ludo WhatsApp Groups</p>
-      <a href="https://ludogrouplink.com/ludo-whatsapp-group.html" class="join-btn" target="_blank">Join Now</a>
-    </div>
-
-    <div class="group-card">
-      <h3>💥 ludo-whatsapp-group-link</h3>
-      <p>Join active players | Daily matches | Secure payment</p>
-      <a href="https://ludogrouplink.com/ludo-whatsapp-group-link.html" class="join-btn" target="_blank">Join Now</a>
-    </div>
-
-    <div class="group-card">
-      <h3>💥 ludo-whatsapp-group-links</h3>
-      <p>24/7 Ludo Play | No Cheating | Fast Support</p>
-      <a href="https://ludogrouplink.com/ludo-whatsapp-group-links.html" class="join-btn" target="_blank">Join Now</a>
-    </div>
-
-    <div class="group-card">
-      <h3>💥 ludo-whatsapp-groups</h3>
-      <p>Cash Games | Verified Groups | New Matches Daily</p>
-      <a href="https://ludogrouplink.com/ludo-whatsapp-groups.html" class="join-btn" target="_blank">Join Now</a>
-    </div>
-
-    <div class="group-card">
-      <h3>💥 online-ludo-game</h3>
-      <p>Play Online Ludo | Compete & Earn</p>
-      <a href="https://ludogrouplink.com/online-ludo-game.html" class="join-btn" target="_blank">Join Now</a>
-    </div>
-
-    <div class="group-card">
-      <h3>💥 Online ludo group link india</h3>
-      <p>Top Indian Ludo WhatsApp Links</p>
-      <a href="https://ludogrouplink.com/Online%20ludo%20group%20link%20india.html" class="join-btn" target="_blank">Join Now</a>
-    </div>
-
-    <div class="group-card">
-      <h3>💥 privacy</h3>
-      <p>Review our privacy policy and stay informed.</p>
-      <a href="https://ludogrouplink.com/privacy.html" class="join-btn" target="_blank">View</a>
-    </div>
-
-  
-    <!-- Add more group-card blocks as needed -->
-  </div>
+    <!-- More group-cards will follow with image additions -->
+</div>
 
   <footer>
     <div class="footer-links">
